# Carotid

./: .gitignore  CMakeLists.txt  README.md  _core_8cpp.html  _core_8h.html  _core_8h_source.html  _identity_generator_8cpp.html  _identity_generator_8h.html  _identity_generator_8h_source.html  _lib_carotid_8cpp.html  _lib_carotid_8h.html  _lib_carotid_8h_source.html  _platform_8h.html  _platform_8h_source.html  _r_e_a_d_m_e_8md.html  _sanity_check_8cpp.html  _sanity_check_8h.html  _sanity_check_8h_source.html  _utility_8h.html  _utility_8h_source.html  annotated.html  classcarotid_1_1_id_options-members.html  classcarotid_1_1_id_options.html  classcarotid_1_1_identity_generator-members.html  classcarotid_1_1_identity_generator.html  classes.html  dir_397d9aeee4af8edecac90968d93b57df.html  dir_3db2df506b6dd4f2b69c0090eb6b4271.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9e19cc807fbc43485fa98d46c2628fd2.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dd33473d3906bf219a6ed0ee7e398d95.html  doxygen_crawl.html  external_2_r_e_a_d_m_e_8md.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+15 more)
.github/workflows/: CI.yml
cmake/: install_config.cmake  options.cmake
docs/: CMakeLists.txt
include/: CMakeLists.txt
include/carotid/: CMakeLists.txt  IdentityGenerator.h  LibCarotid.h  Platform.h  Utility.h  Utility.hpp
search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt  IdentityGenerator.cpp  LibCarotid.cpp
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt  Core.cpp  Core.h  Core.hpp
tests/SanityCheck/: CMakeLists.txt  SanityCheck.cpp  SanityCheck.h
